# JavascriptCoreHosting

./: .gitignore  README.md  package-lock.json  settings.gradle
app/: build.gradle
app/src/androidTest/java/moe/tlaster/javascripthosting/app/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/test/java/moe/tlaster/javascripthosting/app/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
javascriptcorehosting/: CMakeLists.txt  build.gradle
javascriptcorehosting/src/androidTest/java/moe/tlaster/javascriptcorehosting/: ExampleInstrumentedTest.kt
javascriptcorehosting/src/main/: .gitignore  AndroidManifest.xml
javascriptcorehosting/src/main/cpp/: Instance.cpp  Instance.h  JSContext.cpp  JSFunction.cpp  JSFunction.h  JSJNI.h  JSObject.cpp  JSString.cpp  JSValue.cpp
javascriptcorehosting/src/main/java/moe/tlaster/javascriptcorehosting/: JSArray.java  JSArrayBuffer.java  JSBaseArray.java  JSContext.java  JSContextGroup.java  JSDataView.java  JSDate.java  JSError.java  JSException.java  JSFloat32Array.java  JSFloat64Array.java  JSFunction.java  JSInt16Array.java  JSInt32Array.java  JSInt8Array.java  JSIterator.java  JSON.java  JSObject.java  JSObjectPropertiesMap.java  JSObjectWrapper.java  JSRegExp.java  JSTypedArray.java  JSUint16Array.java  JSUint32Array.java  JSUint8Array.java  JSUint8ClampedArray.java  JSValue.java
javascriptcorehosting/src/main/res/values/: strings.xml
javascriptcorehosting/src/test/java/moe/tlaster/javascriptcorehosting/: ExampleUnitTest.kt
